Single top moved and referenced
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@249 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -139,18 +139,17 @@
 
 \appendix
 
+%\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
+%\label{app:TTBar_Xsecs}
+%\input{tex/TTBar_Xsecs_Appendix.tex}
+
 \chapter{Appendix: Implementation of Models}
 \label{app:MonojetLikeModels_Appendix}
 \input{tex/MonojetLikeModels_Appendix.tex}
 
-\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
-\label{app:TTBar_Xsecs}
-\input{tex/TTBar_Xsecs_Appendix.tex}
-
-\chapter{Appendix: Detailed studies for EW models}
+\chapter{Appendix: Additional models for Dark Matter searches}
 \label{app:EWSpecificModels_Appendix}
 \input{tex/EWSpecificModels_Appendix.tex}
-
 
 \chapter{Appendix: Presentation of experimental results for reinterpretation}
 \label{app:Presentation_Of_Experimental_Results}
