--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -233,8 +233,6 @@ The coefficients $c_1$ and $c_2$ appearing in (\ref{eq:gViVj}) determine the rel
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 \subsubsection{Parameter scan}
 
-\todo{The axes of these plots will be rescaled in terms of c1/c2.}
-
 As stated above and shown in Ref.~\cite{Nelson:2013pqa}, 
 the kinematic distributions for dimension-7 scalar and pseudoscalar operators
 only shows small differences. This has been verified from a generator-level study:
@@ -242,7 +240,7 @@ the signal acceptance after a simplified analysis selection
 (\MET$>$350~\gev, leading jet $p_T > $ 40~\gev, minimum azimuthal difference between
 either of the two jets and the \MET direction $>$ 0.4) is roughly 70\% for both. 
 We therefore only suggest to generate one of the two models. 
-Todo{When we have the cross-sections for both, we can recommend the one with the highest cross-section.}
+%Todo{When we have the cross-sections for both, we can recommend the one with the highest cross-section.}
 
 %as shown in Fig.~\ref{fig:EW_EFT5_gamma_MET}.
 %\begin{figure}
@@ -258,24 +256,24 @@ since these coefficient factorize in the matrix element.
 Only the case $c_1=c_2=1$ is generated as benchmark;
 other cases are left for reinterpretation as they will only need a 
 rescaling of the cross-sections. 
-\Todo{Appendix~\ref{app:EWSpecificModels_Appendix} contains cross-sections
-	for these operators, for values }
+%\Todo{Appendix~\ref{app:EWSpecificModels_Appendix} contains cross-sections
+%	for these operators, for values }
 %for the various DM
 %mass points considered.
 
-%\begin{figure}[h!]
-%  \centering
-%  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
-%  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/metPt}
-%  }
-%  \hfill
-%  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
-%  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newPlot}
-%  }
-%    \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
-%    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons.}
-%    \label{fig:EFTD7_EW_kinematics}
-%\end{figure}
+\begin{figure}[h!]
+  \centering
+  \subfloat[Missing transverse momentum distribution.\label{fig:EFTD7_EW_Z_MET}]{%
+  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/metPt}
+  }
+  \hfill
+  \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
+  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newPlot}
+  }
+    \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
+    for the scalar and pseudoscalar operators representing direct interactions between DM and bosons. The y axis units are multiplied by 100.}
+    \label{fig:EFTD7_EW_kinematics}
+\end{figure}
 
 
 %%%%%%%%%%%%%Dimension 8 operators
