--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -11,7 +11,9 @@ With the MFV assumption, the top quark plays a primary role in the phenomenology
 the monojet process described in Section~\ref{sec:monojet_scalar}, but also production of dark matter
 in association with top pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}. 
 Dedicated searches including jets from heavy flavor quarks in the final state
-can be designed for this production mechanism. 
+can be designed for this production mechanism. Another class of simplified models,  
+which includes a Dark Matter interpretation among many others, and yields a single
+top quark in the final state, is detailed in Appendix~\ref{sec:singletop}. 
 
 \begin{figure}[h!]
 \centering
